# Sentinel-AI-agents-that-work-ops-with-a-human-always-in-the-loop

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py
app/agents/: base.py  classifier.py  escalator.py  orchestrator.py  state_machine.py  tool_runner.py
app/api/: audit.py  health.py  tasks.py  tools.py
app/models/: db_models.py  schemas.py
app/services/: audit.py
app/tasks/: agent_tasks.py  celery_app.py
app/tools/: auth.py  base.py  billing.py  registry.py  support.py
sentinel-ui/: package-lock.json  package.json
sentinel-ui/src/: App.css  App.jsx
tests/: conftest.py  test_agents.py  test_api.py  test_tools.py
